--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
         
         var nodeCountLastTime = 0; // We start out with ourselves only
         var sleepTime = 0;
-        var extraordinaryPaths=[]; // This tracks extraordinary paths across renderings
+        //var extraordinaryPaths=[]; // This tracks extraordinary paths across renderings @wbnwbnwbn
         const me_str = '<%- JSON.stringify(me) %>';
         const me = JSON.parse(me_str);
 
@@ -76,6 +76,7 @@
                         }
                     }
 
+                    /****    @wbn DELETE 
                     for (var srcP in pulseGroup.pulses) {
                         var srcEntry = pulseGroup.pulses[srcP];
                         for (var destP in pulseGroup.pulses) {
@@ -112,14 +113,15 @@
                             }
                         }
                     }
+                   @wbn DELETE BLOCK ******/
 
                     //extraodinary path table
                     
                     // console.log("*  extraordinary PATHS="+extraordinaryPaths);
                     $("#extraordinary > tbody").empty();   //emptying table and redrawing. would be better to add/del table entties by ID "#src-dest"
 
-                    for (var e in extraordinaryPaths) {
-                        var extraordinaryPath=extraordinaryPaths[e];
+                    for (var e in pulseGroup.extraordinaryPaths) {
+                        var extraordinaryPath=pulseGroups.extraordinaryPaths[e];
                         // console.log("extraordinaryPath: "+JSON.stringify(extraordinaryPath,null,2));
                         var now = new Date();
                         var freshness=now.getTime()-extraordinaryPath.lastUpdated;
@@ -134,9 +136,6 @@
                             $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                         }
                     }
-
-                    //for every row in extraordinary table
-                    //if ts > 2seconds ago, delete row
 
                     // console.log(" pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                     if ( pulseGroup.nodeCount >= 1 ) {
