DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,8 @@
 
                     //extraodinary path table
                     
-                    console.log("*  extraordinary PATHS=" + extraordinaryPaths + " pulseGroup= " + dump(pulseGroup) );
+                    //console.log("*  extraordinary PATHS=" + extraordinaryPaths + " pulseGroup= " + dump(pulseGroup) );
+                    console.log(" pulseGroup= " + dump(pulseGroup) );
                     $("#extraordinary > tbody").empty();   //emptying table and redrawing. would be better to add/del table entties by ID "#src-dest"
 
                     for (var e in pulseGroup.extraordinaryPaths) {
