DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
                     //extraodinary path table
                     
                     //console.log("*  extraordinary PATHS=" + extraordinaryPaths + " pulseGroup= " + dump(pulseGroup) );
-                    console.log(" pulseGroup= " + dump(pulseGroup) );
+                    console.log(" pulseGroup= " + JSON.stringify(pulseGroup,null,2) );
                     $("#extraordinary > tbody").empty();   //emptying table and redrawing. would be better to add/del table entties by ID "#src-dest"
 
                     for (var e in pulseGroup.extraordinaryPaths) {
