--- a/views/index.html
+++ b/views/index.html
@@ -82,11 +82,13 @@
                     console.log(" pulseGroup= " + JSON.stringify(pulseGroup,null,2) );
                     $("#extraordinary > tbody").empty();   //emptying table and redrawing. would be better to add/del table entties by ID "#src-dest"
 
+                    var timeNow=new Date(); timeNow=timeNow.getTime();
+
                     for (var e in pulseGroup.extraordinaryPaths) {
                         var extraordinaryPath=pulseGroup.extraordinaryPaths[e];
                         console.log("we have an extraordinaryPath: "+JSON.stringify(extraordinaryPath,null,2));
                         var trLabel= "extraordinary path =" + extraordinaryPath.aSide+ "-" + extraordinaryPath.zSide + " "+JSON.stringify(extraordinaryPath, null, 2);
-                        var duration=Math.round((now.getTime()-parseInt(extraordinaryPath.startTimestamp))/1000);
+                        var duration=Math.round((timeNow-parseInt(extraordinaryPath.startTimestamp))/1000);
                         console.log("duration="+duration+trLabel);
                         $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                     }
@@ -210,6 +212,7 @@
     <h1>DARP Node <%= me.geo %> http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %></h1>
 
     <% var d = new Date(); %>
+    <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
     <% var timeStr = d.toString().split(' ')[4]; %>
 
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
