--- a/views/index.html
+++ b/views/index.html
@@ -87,7 +87,7 @@
                     for (var e in pulseGroup.extraordinaryPaths) {
                         var extraordinaryPath=pulseGroup.extraordinaryPaths[e];
                         console.log("we have an extraordinaryPath: "+JSON.stringify(extraordinaryPath,null,2));
-                        var trLabel= "extraordinary path =" + extraordinaryPath.aSide+ "-" + extraordinaryPath.zSide + " "+JSON.stringify(extraordinaryPath, null, 2);
+                        var trLabel= '<tr id="' + extraordinaryPath.aSide+ "-" + extraordinaryPath.zSide + '" >';
                         var duration=Math.round((timeNow-parseInt(extraordinaryPath.startTimestamp))/1000);
                         console.log("duration="+duration+trLabel);
                         $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
@@ -288,8 +288,8 @@
                     <th>Relay OWL</th>
                     <th>How much better?</th>
                     <th></th>
-                    <th>path1</th>
-                    <th>path to dest</th>
+                    <th>segment1</th>
+                    <th>segment2</th>
                 </tr>
             </thead>
             <tbody>
