--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
                     $("#extraordinary > tbody").empty();   //emptying table and redrawing. would be better to add/del table entties by ID "#src-dest"
 
                     var timeNow=new Date(); timeNow=timeNow.getTime();
-
+                    var pulseEntryCount=0;
                     for (var e in pulseGroup.extraordinaryPaths) {
                         var extraordinaryPath=pulseGroup.extraordinaryPaths[e];
                         console.log("we have an extraordinaryPath: "+JSON.stringify(extraordinaryPath,null,2));
@@ -91,8 +91,9 @@
                         var duration=Math.round((timeNow-parseInt(extraordinaryPath.startTimestamp))/1000);
                         console.log("duration="+duration+trLabel);
                         $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
+                        pulseEntryCount++;
                     }
-                    for (var i=10-count; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
+                    for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
                         $("#extraordinary").append("<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
 
 
