DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -94,7 +94,7 @@
                         pulseEntryCount++;
                     }
                     for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
-                        $("#extraordinary").append("<tr><td>0 sec</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
+                        $("#extraordinary").append("<tr><td>0</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
 
 
                     // console.log(" pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
