--- a/views/index.html
+++ b/views/index.html
@@ -225,7 +225,7 @@
     
     <% for (var p in myPulseGroups) { %>
         <% var pulseGroup=myPulseGroups[p]; %>
-        <h2>groupName POLLFREQ <%= pulseGroup.cycleTime %> seconds</h2>
+        <h2> <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h2>
 
         <!-- show OWL Matrix table -->
         <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
