--- a/views/index.html
+++ b/views/index.html
@@ -93,8 +93,8 @@
                         $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                         pulseEntryCount++;
                     }
-                    for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
-                        $("#extraordinary").append("<tr><td>0</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
+                    //for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
+                    //    $("#extraordinary").append("<tr><td>0</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
 
 
                     // console.log(" pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
