DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -282,7 +282,8 @@
         </table>
 
         <!-- Display extraordinaryPath -->
-        <br><h2>Bill questions: How often, how much better, how long do optimizations last?   Better Network Paths through intermediaries</h2>
+
+        <br><h2>*Bill questions: How often, how much better, how long do optimizations last?   Better Network Paths through intermediaries</h2>
         <table id="extraordinary">
             <thead>
                 <tr>
