--- a/views/index.html
+++ b/views/index.html
@@ -62,11 +62,13 @@
                                 var regex = "/@/";
                                 var flag=strOwl.match(regex);
                                 if (flag) {
+                                    console.log(`fetchState(): flagged `+srcOwlMintEntry.mint+"-"+pulseEntry.mint);
                                     if ((srcOwlMintEntry!=null) && (destOwlMintEntry!=null)) {
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BUSY");
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "yellow").css("border-width", "3px");
                                     }
                                 } else {
+                                    console.log(`fetchState(): unflagged `+srcOwlMintEntry.mint+"-"+pulseEntry.mint);
                                     if (srcOwlMintEntry!=null && destOwlMintEntry!=null) {
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).removeClass("BUSY");
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "black").css("border-width", "1px");
@@ -86,10 +88,10 @@
                     var pulseEntryCount=0;
                     for (var e in pulseGroup.extraordinaryPaths) {
                         var extraordinaryPath=pulseGroup.extraordinaryPaths[e];
-                        console.log("we have an extraordinaryPath: "+JSON.stringify(extraordinaryPath,null,2));
+                        //console.log("we have an extraordinaryPath: "+JSON.stringify(extraordinaryPath,null,2));
                         var trLabel= '<tr id="' + extraordinaryPath.aSide+ "-" + extraordinaryPath.zSide + '" >';
                         var duration=Math.round((timeNow-parseInt(extraordinaryPath.startTimestamp))/1000);
-                        console.log("duration="+duration+trLabel);
+                        //console.log("duration="+duration+trLabel);
                         if (duration>5) {
                             $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                             pulseEntryCount++;
