--- a/views/index.html
+++ b/views/index.html
@@ -59,6 +59,8 @@
                                 }
                                 $("."+srcMint+"-"+pulseEntry.mint).html(myDiv+link+owl+" ms</a></div>");
 
+                                console.log(`fetchState(): strOwl=${strOwl}`);
+
                                 var regex = "/@/";
                                 var flag=strOwl.match(regex);
                                 if (flag) {
@@ -68,6 +70,8 @@
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "yellow").css("border-width", "3px");
                                     }
                                 } else {
+                                    //console.log(`fetchState(): unflagged `+srcOwlMintEntry.mint+"-"+pulseEntry.mint);
+
                                     if (srcOwlMintEntry!=null && destOwlMintEntry!=null) {
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).removeClass("BUSY");
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "black").css("border-width", "1px");
