--- a/views/index.html
+++ b/views/index.html
@@ -98,7 +98,10 @@
 
 //                            $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BUSY"); //marking the revenue node
                         }
+
+                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).removeClass("BETTER");
                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "blue").css("border-width", "5px");
+    
                     }
                     //for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
                     //    $("#extraordinary").append("<tr><td>0</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
