--- a/views/index.html
+++ b/views/index.html
@@ -99,8 +99,8 @@
 //                            $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BUSY"); //marking the revenue node
                         }
 
-                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).removeClass("BETTER");
-                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "blue").css("border-width", "5px");
+                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BETTER");
+                        //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "blue").css("border-width", "5px");
     
                     }
                     //for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
