DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -100,7 +100,7 @@
                         }
 
                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BETTER");
-                        //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "blue").css("border-width", "5px");
+                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "purple").css("border-width", "5px");
     
                     }
                     //for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
