--- a/views/index.html
+++ b/views/index.html
@@ -62,7 +62,7 @@
                                 var flag=strOwl.match(/.*@/);
                                 if (flag) {
                                     var d=new Date();var timeNow=d.toString();
-                                    console.log(timeNow+`fetchState(): flagged `+srcOwlMintEntry.geo+"-"+pulseEntry.geo+'='+owl+' @ ms');
+                                    console.log(timeNow+`fetchState(): foudn entry flagged `+srcOwlMintEntry.geo+"-"+pulseEntry.geo+'='+owl+' @ ms');
                                     if ((srcOwlMintEntry!=null) && (destOwlMintEntry!=null)) {
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BUSY");
                                         $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "yellow").css("border-width", "3px");
@@ -97,12 +97,18 @@
                             $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                             pulseEntryCount++;
 
-//                            $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BUSY"); //marking the revenue node
+                            //$("."+srcOwlMintEntry.mint+"-"+extraordinaryPath.).addClass("BETTER"); //marking the revenue node
                         }
 
-                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BETTER");
-                        $("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "purple").css("border-width", "5px");
+
+
+                        console.log(`marking extraordinary path ${dump(extraordinaryPath)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
+                        //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BETTER");
+                        //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "purple").css("border-width", "5px");
     
+
+
+
                     }
                     //for (var i=10-pulseEntryCount; i>0; i--) //to aleays drw 10 lines so screen isnt so jumpy
                     //    $("#extraordinary").append("<tr><td>0</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>");
