--- a/views/index.html
+++ b/views/index.html
@@ -102,7 +102,7 @@
 
 
 
-                        console.log(`marking extraordinary path ${dump(extraordinaryPath)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
+                        console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
                         //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BETTER");
                         //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "purple").css("border-width", "5px");
     
