DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -103,7 +103,7 @@
 
 
                         console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
-                        //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).addClass("BETTER");
+                        $("."+extraordinaryPath.intermediary).addClass("BETTER");
                         //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "purple").css("border-width", "5px");
     
 
