--- a/views/index.html
+++ b/views/index.html
@@ -276,7 +276,7 @@
                 <% for (let dest in pulseGroup.matrix[src]) { %>
                     <% let destMintEntry=pulseGroup.mintTable[parseInt(dest)]; %>
                     <% if (destMintEntry!=null) { %>
-                        <% let classNameMintsGeos = srcMintEntry.mint + "-" + destMintEntry.mint + " " + srcMintEntry.geo + " " + destMintEntry.geo + srcMintEntry.geo + "-" + destMintEntry.geo; %>
+                        <% let classNameMintsGeos = srcMintEntry.mint + "-" + destMintEntry.mint + " " + srcMintEntry.geo + " " + destMintEntry.geo + " "+srcMintEntry.geo + "-" + destMintEntry.geo; %>
                         <% let classNameMints = srcMintEntry.mint + "-" + destMintEntry.mint; %>
                         <% let destMintEntryUrl = "http://" + destMintEntry.ipaddr + ":" + destMintEntry.port.toString() + "/graph/" + srcMintEntry.geo + "/" + destMintEntry.geo; %>
                         <td class="<%= classNameMintsGeos %>">
