DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -104,7 +104,7 @@
 
                         console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
                         $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide).addClass("BETTER");
-                        //$("."+srcOwlMintEntry.mint+"-"+pulseEntry.mint).css("border-color", "purple").css("border-width", "5px");
+                        $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide).css("border-color", "purple").css("border-width", "5px");
     
 
 
