--- a/views/index.html
+++ b/views/index.html
@@ -102,7 +102,8 @@
 
 
 
-                        console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
+                        //console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
+                        console.log(`marking extraordinary path `+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide);
                         $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide).addClass("BETTER");
                         $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide).css("border-color", "purple").css("border-width", "5px");
     
