--- a/views/index.html
+++ b/views/index.html
@@ -94,7 +94,7 @@
                         var duration=Math.round((timeNow-parseInt(extraordinaryPath.startTimestamp))/1000);
                         //console.log("duration="+duration+trLabel);
                         if (duration>5) {
-                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td>"+extraordinaryPath.direct+" ms</td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
+                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                             pulseEntryCount++;
 
                             //$("."+srcOwlMintEntry.mint+"-"+extraordinaryPath.).addClass("BETTER"); //marking the revenue node
@@ -103,7 +103,7 @@
 
 
                         //console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
-                        console.log(`marking extraordinary path `+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide);
+                        //console.log(`marking extraordinary path `+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide);
                         $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide).addClass("BETTER");
                         $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide).css("border-color", "pink").css("border-width", "5px");
                         $("."+extraordinaryPath.aSide+"-"+extraordinaryPath.intermediary).css("border-color", "green").css("border-width", "5px");
