DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -101,6 +101,7 @@
                         }
 
 
+                        //TODO: I would like to highlight the same #'s in the  Bill table - color on the direct vs indirect'
 
                         //console.log(`marking extraordinary path ${JSON.stringify(extraordinaryPath,null,2)} `+extraordinaryPath.intermediary+"-"+pulseEntry.geo+'='+owl+' ms');
                         //console.log(`marking extraordinary path `+extraordinaryPath.aSide+"-"+extraordinaryPath.zSide);
