DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -184,7 +184,7 @@
                     }
 
                     measurementCosts = parseFloat(measurementCosts.toFixed(6));
-                    $(".total_earn").text("measurementCosts: $"+measurementCosts);
+                    $(".total_earn").text("Overhead: $"+measurementCosts);
                 }
 
             }).fail(function() {
