--- a/views/index.html
+++ b/views/index.html
@@ -93,8 +93,14 @@
                         var trLabel= '<tr id="' + extraordinaryPath.aSide+ "-" + extraordinaryPath.zSide + '" >';
                         var duration=Math.round((timeNow-parseInt(extraordinaryPath.startTimestamp))/1000);
                         //console.log("duration="+duration+trLabel);
-                        if (duration>5) {
+                        if (duration>10) {    //add extraordinary paths that have been lasting more than 10 seconds.
+                            var directPathSelector=extraordinaryPath.aSide+"-"+extraordinaryPath.zSide;
+                            var segment1PathSelector=extraordinaryPath.aSide+"-"+extraordinaryPath.intermediary;
+                            var segment2PathSelector=extraordinaryPath.intermediary+"-"+extraordinaryPath.zSide;
                             $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
+//
+//  I want thee links to the matrix graphs first
+//                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                             pulseEntryCount++;
 
                             //$("."+srcOwlMintEntry.mint+"-"+extraordinaryPath.).addClass("BETTER"); //marking the revenue node
