DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -250,6 +250,8 @@
     <% var timeStr = d.toString().split(' ')[4]; %>
 
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
+    <p><  <%= process.env.GENESISNODELIST %> </p>
+    
     
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
     
