--- a/views/index.html
+++ b/views/index.html
@@ -252,10 +252,10 @@
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
     <p id="genesisnodelist">: <%= process.env.GENESISNODELIST.split(",") %> </p>
 
-    <% var gNodes=process.env.GENESISNODELIST.split(",") %>
+    <% var gNodes=process.env.GENESISNODELIST; %>
     <% for (var p in gNodes) { %>
         <% var gurl="http://"+gNodes[p]+"/"; %>
-        <a href=<%=gNodes[p] %></a>
+        <%=gNodes[p]%>
     <% } %>
 
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
