DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -250,12 +250,12 @@
     <% var timeStr = d.toString().split(' ')[4]; %>
 
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
-    <p id="genesisnodelist">: <%= process.env.GENESISNODELIST.split(",") %> </p>
+    <p id="genesisnodelist">: <%= process.env.GENESISNODELIST; %> </p>
 
     <% var gNodes=process.env.GENESISNODELIST; %>
     <% for (var p in gNodes) { %>
         <% var gurl="http://"+gNodes[p]+"/"; %>
-        <%=gNodes[p]%>
+        <p><%=gNodes[p]%></p>
     <% } %>
 
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
