--- a/views/index.html
+++ b/views/index.html
@@ -250,12 +250,12 @@
     <% var timeStr = d.toString().split(' ')[4]; %>
 
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
-    <p id="genesisnodelist">: <%= process.env.GENESISNODELIST; %> </p>
+    <p id="genesisnodelist">GenesisNodeList: <%= process.env.GENESISNODELIST; %> </p>
 
     <% var gNodes=process.env.GENESISNODELIST; %>
     <% for (var p in gNodes) { %>
         <% var gurl="http://"+gNodes[p]+"/"; %>
-        <p><%=gNodes[p]%></p>
+        <p> <%= gNodes[p] %> </p>
     <% } %>
 
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
