DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -248,11 +248,14 @@
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
     <% var timeStr = d.toString().split(' ')[4]; %>
-    <% var g=process.env.GENESISNODELIST; %>
+    <% var g=process.env.GENESISNODELIST.split(","); %>
 
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
     <p id="genesisnodelist">GenesisNodes: <%= JSON.stringify(g,null,2); %> </p>
-    
+    <% for (var p in g { %>
+        <p><a href="http://<%=g[p]<%></a></p>
+    <% } %>
+
     
     <!-- INSTRUMENTATION externalize pulseGroup matrix -->
     
