DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -252,7 +252,7 @@
 
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
     <p id="genesisnodelist">GenesisNodes: <%= JSON.stringify(g,null,2); %> </p>
-    <% for (var p in g { %>
+    <% for (var p in g) { %>
         <p><a href="http://<%=g[p]%>"><%=g[p]%></a></p>
     <% } %>
 
