DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -253,7 +253,7 @@
     <p id="dateTime">*Refresh: <%= timeStr %> </p>
     <p id="genesisnodelist">GenesisNodes: <%= JSON.stringify(g,null,2); %> </p>
     <% for (var p in g) { %>
-        <p><a href="http://<%=g[p]%>:65013/">http://<%=g[p]%>/</a></p>
+        <p><a href="http://<%=g[p]%>:65013/">http://<%=g[p]%>:65013/</a></p>
     <% } %>
 
     
