DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -609,8 +609,8 @@
         <p id="genesisnodelist">GenesisNodes: <%= JSON.stringify(g,null,2); %> </p>
         <% for (var p in g) { %>
             <p><a href="http://<%=g[p]%>:65013/">http://<%=g[p]%>:65013/</a></p>
-            <p><a href="http://<%=g[p]%>:65013/mintable">http://<%=g[p]%>:65013/mintable</a></p>
-            <p><a href="http://<%=g[p]%>:65013/pulsegroup">http://<%=g[p]%>:65013/pulsegroup</a></p>
+            <p><a href="http://<%=g[p]%>:65013/mintTable">http://<%=g[p]%>:65013/mintTable</a></p>
+            <p><a href="http://<%=g[p]%>:65013/pulsegroups">http://<%=g[p]%>:65013/pulsegroups</a></p>
             <p><a href="http://<%=g[p]%>:65013/me">http://<%=g[p]%>:65013/me</a></p>
             
         <% } %>
